[tool.poetry]
name = "changeforge"
description = "Tool for teams to manage the CHANGELOG given a list of different changes."
authors = ["ricardoleal20 <rick.leal420@gmail.com>"]
license = "MIT License"
readme = "README.md"
version = "0.1.4"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
maturin = { version = ">=1.5, <2", extras = ["cffi"] }

[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "changeforge"
requires-python = ">=3.9"
classifiers = [
    "Topic :: Software Development :: Version Control",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["authors", "description", "license", "readme", "version"]
